--- a/AirlineReservation/Automated Testing.ipynb
+++ b/AirlineReservation/Automated Testing.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,9 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test failed\n"
+     ]
+    }
+   ],
    "source": [
     "driver.get(\"http://localhost:8000\")\n",
     "element = WebDriverWait(driver, 10).until(lambda x: x.find_element(By.CSS_SELECTOR,\"select#id_destination\"))\n",
@@ -44,7 +52,14 @@
     "button = driver.find_element(By.CSS_SELECTOR,\"input.form-control:nth-child(4)\")\n",
     "source.send_keys(\"pakistan\")\n",
     "destination.send_keys(\"india\")\n",
-    "button.click()"
+    "button.click()\n",
+    "\n",
+    "#checking for errors\n",
+    "try :\n",
+    "    error = driver.find_element(By.CSS_SELECTOR,\"html body div.container.main-body-block div.error-block\")\n",
+    "    print(\"Test failed\")\n",
+    "except:\n",
+    "    print(\"Test passed\")"
    ]
   },
   {
