Homepage testing done

--- a/AirlineReservation/Automated Testing.ipynb
+++ b/AirlineReservation/Automated Testing.ipynb
@@ -27,12 +27,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Test 1</h3>"
+    "<h3>Test 1</h3>\n",
+    "Conditions : Distinct source and destination<br>\n",
+    "Expected : Success"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test passed\n"
+     ]
+    }
+   ],
+   "source": [
+    "driver.get(\"http://localhost:8000\")\n",
+    "element = WebDriverWait(driver, 10).until(lambda x: x.find_element(By.CSS_SELECTOR,\"select#id_destination\"))\n",
+    "\n",
+    "source = driver.find_element(By.CSS_SELECTOR,\"select#id_source\")\n",
+    "destination = driver.find_element(By.CSS_SELECTOR,\"select#id_destination\")\n",
+    "button = driver.find_element(By.CSS_SELECTOR,\"input.form-control:nth-child(4)\")\n",
+    "source.send_keys(\"pakistan\")\n",
+    "destination.send_keys(\"india\")\n",
+    "button.click()\n",
+    "\n",
+    "#checking for errors\n",
+    "try :\n",
+    "    error = driver.find_element(By.CSS_SELECTOR,\"html body div.container.main-body-block div.error-block\")\n",
+    "    print(\"Test failed\")\n",
+    "except:\n",
+    "    print(\"Test passed\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Test 2</h3>\n",
+    "Conditions : Same source and destination<br>\n",
+    "Expected : Faliure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -50,8 +93,8 @@
     "source = driver.find_element(By.CSS_SELECTOR,\"select#id_source\")\n",
     "destination = driver.find_element(By.CSS_SELECTOR,\"select#id_destination\")\n",
     "button = driver.find_element(By.CSS_SELECTOR,\"input.form-control:nth-child(4)\")\n",
-    "source.send_keys(\"pakistan\")\n",
-    "destination.send_keys(\"india\")\n",
+    "source.send_keys(\"france\")\n",
+    "destination.send_keys(\"france\")\n",
     "button.click()\n",
     "\n",
     "#checking for errors\n",
