All 8 tests designed

--- a/AirlineReservation/Automated Testing.ipynb
+++ b/AirlineReservation/Automated Testing.ipynb
@@ -10,17 +10,28 @@
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.common.keys import Keys\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
-    "from selenium.webdriver.support import expected_conditions as EC"
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "driver =  webdriver.Firefox()\n",
     "#driver  = webdriver.Chrome()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_tests = 8\n",
+    "n_passed = 0"
    ]
   },
   {
@@ -34,20 +45,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Press enter to activate test 1 .... \n",
+      "\n",
+      "\n",
+      "Test 1 : Distinct Source Destination Test\n",
+      "Input : \n",
+      "Source      : india\n",
+      "Destination : france\n",
       "Expected : Success\n",
       "Got      : Success\n",
-      "Test passed\n"
+      "Test passed\n",
+      "\n",
+      "--------------------------------\n",
+      "\n"
      ]
     }
    ],
    "source": [
+    "print(\"Press enter to activate test 1 .... \")\n",
+    "input()\n",
+    "print()\n",
     "driver.delete_all_cookies();\n",
     "driver.get(\"http://localhost:8000\")\n",
     "element = WebDriverWait(driver, 30).until(EC.presence_of_element_located((By.CSS_SELECTOR,\"input.form-control:nth-child(4)\")))\n",
@@ -55,10 +79,14 @@
     "source = driver.find_element(By.CSS_SELECTOR,\"select#id_source\")\n",
     "destination = driver.find_element(By.CSS_SELECTOR,\"select#id_destination\")\n",
     "button = driver.find_element(By.CSS_SELECTOR,\"input.form-control:nth-child(4)\")\n",
-    "source.send_keys(\"pakistan\")\n",
-    "destination.send_keys(\"india\")\n",
+    "source.send_keys(\"india\")\n",
+    "destination.send_keys(\"france\")\n",
     "button.click()\n",
     "\n",
+    "print(\"Test 1 : Distinct Source Destination Test\")\n",
+    "print(\"Input : \")\n",
+    "print(\"Source      : india\")\n",
+    "print(\"Destination : france\")\n",
     "print(\"Expected : Success\")\n",
     "#checking for errors\n",
     "try :\n",
@@ -67,7 +95,9 @@
     "    print(\"Test failed\")\n",
     "except:\n",
     "    print(\"Got      : Success\")\n",
-    "    print(\"Test passed\")"
+    "    n_passed += 1\n",
+    "    print(\"Test passed\")\n",
+    "print(\"\\n--------------------------------\\n\")"
    ]
   },
   {
@@ -81,20 +111,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Press enter to activate test 2 .... \n",
+      "\n",
+      "\n",
+      "Test 2 : Same Source Destination Test\n",
+      "Input : \n",
+      "Source      : india\n",
+      "Destination : india\n",
       "Expected : Error\n",
       "Got      : Error\n",
-      "Test passed\n"
+      "Test passed\n",
+      "\n",
+      "--------------------------------\n",
+      "\n"
      ]
     }
    ],
    "source": [
+    "print(\"Press enter to activate test 2 .... \")\n",
+    "input()\n",
+    "print()\n",
     "driver.delete_all_cookies();\n",
     "driver.get(\"http://localhost:8000\")\n",
     "element = WebDriverWait(driver, 30).until(EC.presence_of_element_located((By.CSS_SELECTOR,\"input.form-control:nth-child(4)\")))\n",
@@ -106,15 +149,21 @@
     "destination.send_keys(\"india\")\n",
     "button.click()\n",
     "\n",
+    "print(\"Test 2 : Same Source Destination Test\")\n",
+    "print(\"Input : \")\n",
+    "print(\"Source      : india\")\n",
+    "print(\"Destination : india\")\n",
     "print(\"Expected : Error\")\n",
     "#checking for errors\n",
     "try :\n",
     "    error = driver.find_element(By.CSS_SELECTOR,\"div.main-body-block div.error-block\")\n",
     "    print(\"Got      : Error\")\n",
+    "    n_passed += 1\n",
     "    print(\"Test passed\")\n",
     "except:\n",
     "    print(\"Got      : Success\")\n",
-    "    print(\"Test failed\")"
+    "    print(\"Test failed\")\n",
+    "print(\"\\n--------------------------------\\n\")"
    ]
   },
   {
@@ -128,24 +177,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Press enter to activate test 3 .... \n",
+      "\n",
+      "\n",
+      "Test 3 : Correct Registration Test\n",
+      "Input : \n",
+      "Username : user881363\n",
+      "Password : password\n",
+      "Email    : user881363@test.com\n",
+      "Expected : Success\n",
+      "Got      : Success\n",
+      "Test passed\n",
+      "\n",
+      "--------------------------------\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "import time\n",
+    "print(\"Press enter to activate test 3 .... \")\n",
+    "input()\n",
+    "print()\n",
     "driver.delete_all_cookies();\n",
-    "driver.get(\"http://localhost:8000/accounts/login\")\n",
+    "driver.get(\"http://localhost:8000/accounts/register\")\n",
     "\n",
-    "element = WebDriverWait(driver, 30).until(EC.presence_of_element_located((By.CSS_SELECTOR,\"input.form-control:nth-child(4)\")))\n",
+    "name_ = \"user\"+str(time.time())[-6:]\n",
+    "pass_ = \"password\"\n",
+    "\n",
+    "element = WebDriverWait(driver, 30).until(EC.presence_of_element_located((By.CSS_SELECTOR,\"input.form-control:nth-child(5)\")))\n",
     "name = driver.find_element(By.CSS_SELECTOR,\"input#id_username\")\n",
     "passwd = driver.find_element(By.CSS_SELECTOR,\"input#id_password\")\n",
     "email = driver.find_element(By.CSS_SELECTOR,\"input#id_email\")\n",
-    "name.send_keys(\"user\"+str(time.time()))\n",
-    "passwd.send_keys(\"pratik\")\n",
-    "email.send_keys()\n",
-    "button = driver.find_element(By.CSS_SELECTOR,\"input.form-control:nth-child(4)\")\n",
+    "name.send_keys(name_)\n",
+    "passwd.send_keys(pass_)\n",
+    "email.send_keys(name_+\"@test.com\")\n",
+    "button = driver.find_element(By.CSS_SELECTOR,\"input.form-control:nth-child(5)\")\n",
     "button.click()\n",
     "\n",
+    "print(\"Test 3 : Correct Registration Test\")\n",
+    "print(\"Input : \")\n",
+    "print(\"Username :\", name_)\n",
+    "print(\"Password :\", pass_)\n",
+    "print(\"Email    :\", name_+\"@test.com\")\n",
     "print(\"Expected : Success\")\n",
     "#checking for errors\n",
     "try :\n",
@@ -154,7 +234,9 @@
     "    print(\"Test failed\")\n",
     "except:\n",
     "    print(\"Got      : Success\")\n",
-    "    print(\"Test passed\")"
+    "    n_passed += 1\n",
+    "    print(\"Test passed\")\n",
+    "print(\"\\n--------------------------------\\n\")"
    ]
   },
   {
@@ -163,15 +245,72 @@
    "source": [
     "<h3>Test 4</h3>\n",
     "Conditions : Wrong Registration<br>\n",
-    "Expected : Success"
+    "Expected : Error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Press enter to activate test 4 .... \n",
+      "\n",
+      "\n",
+      "Test 4 : Wrong Registration Test\n",
+      "Input : \n",
+      "Username : user**678936\n",
+      "Password : password\n",
+      "Email    : user**678936@test.com\n",
+      "Expected : Error\n",
+      "Got      : Error\n",
+      "Test passed\n",
+      "\n",
+      "--------------------------------\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Press enter to activate test 4 .... \")\n",
+    "input()\n",
+    "print()\n",
+    "driver.delete_all_cookies();\n",
+    "driver.get(\"http://localhost:8000/accounts/register\")\n",
+    "\n",
+    "name_ = \"user**\"+str(time.time())[-6:]\n",
+    "pass_ = \"password\"\n",
+    "\n",
+    "element = WebDriverWait(driver, 30).until(EC.presence_of_element_located((By.CSS_SELECTOR,\"input.form-control:nth-child(5)\")))\n",
+    "name = driver.find_element(By.CSS_SELECTOR,\"input#id_username\")\n",
+    "passwd = driver.find_element(By.CSS_SELECTOR,\"input#id_password\")\n",
+    "email = driver.find_element(By.CSS_SELECTOR,\"input#id_email\")\n",
+    "name.send_keys(name_)\n",
+    "passwd.send_keys(pass_)\n",
+    "email.send_keys(name_+\"@test.com\")\n",
+    "button = driver.find_element(By.CSS_SELECTOR,\"input.form-control:nth-child(5)\")\n",
+    "button.click()\n",
+    "\n",
+    "print(\"Test 4 : Wrong Registration Test\")\n",
+    "print(\"Input : \")\n",
+    "print(\"Username :\", name_)\n",
+    "print(\"Password :\", pass_)\n",
+    "print(\"Email    :\", name_+\"@test.com\")\n",
+    "print(\"Expected : Error\")\n",
+    "#checking for errors\n",
+    "try :\n",
+    "    error = driver.find_element(By.CSS_SELECTOR,\"div.main-body-block div.error-block\")\n",
+    "    print(\"Got      : Error\")\n",
+    "    n_passed += 1\n",
+    "    print(\"Test passed\")\n",
+    "except:\n",
+    "    print(\"Got      : Success\")\n",
+    "    print(\"Test failed\")\n",
+    "print(\"\\n--------------------------------\\n\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -184,20 +323,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Press enter to activate test 5 .... \n",
+      "\n",
+      "\n",
+      "Test 5 : Correct Login Test\n",
+      "Input : \n",
+      "Username : pratik\n",
+      "Password : pratik\n",
       "Expected : Success\n",
       "Got      : Success\n",
-      "Test passed\n"
+      "Test passed\n",
+      "\n",
+      "--------------------------------\n",
+      "\n"
      ]
     }
    ],
    "source": [
+    "print(\"Press enter to activate test 5 .... \")\n",
+    "input()\n",
+    "print()\n",
     "driver.delete_all_cookies();\n",
     "driver.get(\"http://localhost:8000/accounts/login\")\n",
     "\n",
@@ -209,6 +361,10 @@
     "button = driver.find_element(By.CSS_SELECTOR,\"input.form-control:nth-child(4)\")\n",
     "button.click()\n",
     "\n",
+    "print(\"Test 5 : Correct Login Test\")\n",
+    "print(\"Input : \")\n",
+    "print(\"Username : pratik\")\n",
+    "print(\"Password : pratik\")\n",
     "print(\"Expected : Success\")\n",
     "#checking for errors\n",
     "try :\n",
@@ -217,7 +373,9 @@
     "    print(\"Test failed\")\n",
     "except:\n",
     "    print(\"Got      : Success\")\n",
-    "    print(\"Test passed\")"
+    "    n_passed += 1\n",
+    "    print(\"Test passed\")\n",
+    "print(\"\\n--------------------------------\\n\")"
    ]
   },
   {
@@ -231,20 +389,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Press enter to activate test 6 .... \n",
+      "\n",
+      "\n",
+      "Test 6 : Wrong Login Test\n",
+      "Input : \n",
+      "Username : pratik\n",
+      "Password : wrong_pass\n",
+      "Expected : Success\n",
       "Expected : Error\n",
       "Got      : Error\n",
-      "Test passed\n"
+      "Test passed\n",
+      "\n",
+      "--------------------------------\n",
+      "\n"
      ]
     }
    ],
    "source": [
+    "print(\"Press enter to activate test 6 .... \")\n",
+    "input()\n",
+    "print()\n",
     "driver.delete_all_cookies();\n",
     "driver.get(\"http://localhost:8000/accounts/login\")\n",
     "\n",
@@ -252,19 +424,26 @@
     "name = driver.find_element(By.CSS_SELECTOR,\"input#id_username\")\n",
     "passwd = driver.find_element(By.CSS_SELECTOR,\"input#id_password\")\n",
     "name.send_keys(\"pratik\")\n",
-    "passwd.send_keys(\"wrong password\")\n",
+    "passwd.send_keys(\"wrong_pass\")\n",
     "button = driver.find_element(By.CSS_SELECTOR,\"input.form-control:nth-child(4)\")\n",
     "button.click()\n",
     "\n",
+    "print(\"Test 6 : Wrong Login Test\")\n",
+    "print(\"Input : \")\n",
+    "print(\"Username : pratik\")\n",
+    "print(\"Password : wrong_pass\")\n",
+    "print(\"Expected : Success\")\n",
     "print(\"Expected : Error\")\n",
     "#checking for errors\n",
     "try :\n",
     "    error = driver.find_element(By.CSS_SELECTOR,\"div.main-body-block div.error-block\")\n",
     "    print(\"Got      : Error\")\n",
+    "    n_passed += 1\n",
     "    print(\"Test passed\")\n",
     "except:\n",
     "    print(\"Got      : Success\")\n",
-    "    print(\"Test failed\")"
+    "    print(\"Test failed\")\n",
+    "print(\"\\n--------------------------------\\n\")"
    ]
   },
   {
@@ -278,20 +457,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Press enter to activate test 7 .... \n",
+      "\n",
+      "\n",
+      "Test 7 : Correct Booking Test\n",
+      "Input : Booking tickets for passengers not exceeding the vacancy of flight\n",
       "Expected : Success\n",
       "Got      : Success\n",
-      "Test passed\n"
+      "Test passed\n",
+      "\n",
+      "--------------------------------\n",
+      "\n"
      ]
     }
    ],
    "source": [
+    "print(\"Press enter to activate test 7 .... \")\n",
+    "input()\n",
+    "print()\n",
     "driver.delete_all_cookies();\n",
     "driver.get(\"http://localhost:8000\")\n",
     "element = WebDriverWait(driver, 30).until(EC.presence_of_element_located((By.CSS_SELECTOR,\"input.form-control:nth-child(4)\")))\n",
@@ -323,6 +513,8 @@
     "button = driver.find_element(By.CSS_SELECTOR,\"input.form-control:nth-child(3)\")\n",
     "button.click()\n",
     "\n",
+    "print(\"Test 7 : Correct Booking Test\")\n",
+    "print(\"Input : Booking tickets for passengers not exceeding the vacancy of flight\")\n",
     "print(\"Expected : Success\")\n",
     "#checking for errors\n",
     "try :\n",
@@ -331,7 +523,9 @@
     "    print(\"Test failed\")\n",
     "except:\n",
     "    print(\"Got      : Success\")\n",
-    "    print(\"Test passed\")"
+    "    n_passed += 1\n",
+    "    print(\"Test passed\")\n",
+    "print(\"\\n--------------------------------\\n\")"
    ]
   },
   {
@@ -345,20 +539,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Press enter to activate test 8 .... \n",
+      "\n",
+      "\n",
+      "Test 7 : Incorrect Booking Test\n",
+      "Input : Booking tickets for passengers exceeding the vacancy of flight\n",
       "Expected : Error\n",
       "Got      : Error\n",
-      "Test passed\n"
+      "Test passed\n",
+      "\n",
+      "--------------------------------\n",
+      "\n"
      ]
     }
    ],
    "source": [
+    "print(\"Press enter to activate test 8 .... \")\n",
+    "input()\n",
+    "print()\n",
     "driver.delete_all_cookies();\n",
     "driver.get(\"http://localhost:8000\")\n",
     "element = WebDriverWait(driver, 30).until(EC.presence_of_element_located((By.CSS_SELECTOR,\"input.form-control:nth-child(4)\")))\n",
@@ -390,16 +595,37 @@
     "button = driver.find_element(By.CSS_SELECTOR,\"input.form-control:nth-child(3)\")\n",
     "button.click()\n",
     "\n",
+    "print(\"Test 7 : Incorrect Booking Test\")\n",
+    "print(\"Input : Booking tickets for passengers exceeding the vacancy of flight\")\n",
     "print(\"Expected : Error\")\n",
     "#checking for exceed warning\n",
     "element = WebDriverWait(driver, 30).until(EC.presence_of_element_located((By.CSS_SELECTOR,\"div.main-body-block\")))\n",
     "txt = driver.find_element(By.CSS_SELECTOR,\"div.main-body-block\").text\n",
     "if txt.strip()==\"Number of bookings exceeds vacancy!\":\n",
     "    print(\"Got      : Error\")\n",
+    "    n_passed += 1\n",
     "    print(\"Test passed\")\n",
     "else:\n",
     "    print(\"Got      : Success\")\n",
-    "    print(\"Test failed\")"
+    "    print(\"Test failed\")\n",
+    "print(\"\\n--------------------------------\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 tests passed out of 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(n_passed,\"tests passed out of\",n_tests)"
    ]
   }
  ],
